# rust-rocks

./: Cargo.toml  README.adoc
.cargo/: config
resources/press-start-2p/: LICENSE.txt
src/: asteroid.rs  bullet.rs  component.rs  controller.rs  entity.rs  event.rs  events.rs  fps_counter.rs  input.rs  main.rs  player.rs  position.rs  render.rs  resource.rs  room.rs  scene.rs  scores.rs  system.rs
src/component/: mod.rs  spatial.rs  sprite.rs
src/entity/: asteroid.rs  bullet.rs  player.rs
src/event/: joystick.rs
src/font/: mod.rs
src/input/: controllers.rs  joystick.rs
src/position/: dynamic_position.rs
src/resource/: bounds.rs  clock.rs  controllers.rs  delta_time.rs  input_events.rs  mod.rs  score.rs  textures.rs
src/room/: game.rs  score.rs  title.rs
src/scene/: game.rs  mod.rs  scene_event.rs  score.rs  title.rs
src/scene/game/: mod.rs
src/scene/game/entity/: asteroid.rs  bullet.rs  mod.rs  player.rs
src/scene/game/system/: collision.rs  mod.rs  movement.rs  player.rs  spawn_asteroid.rs
src/system/: collision.rs  movement.rs  movement_system.rs  player_input.rs  render.rs  spawn_asteroid.rs  timeout.rs
