[package]
name = "rust-rocks"
version = "0.1.0"
authors = ["Tom Simmons (Tomboyo) <tomasimmons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4.11"
rand = "0.7.3"

[dependencies.sdl2]
version = "0.34"
features = ["image"]
