[package]
name = "rust-rocks"
version = "0.1.0"
authors = ["Tom Simmons (Tomboyo) <tomasimmons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "^0.8"
freetype-rs = "^0"
image = "^0"
legion = "^0.4"
log = "^0.4"
piston = "^0"
# At time of writing, sdl2_window is the only back-end with controller event support
pistoncore-sdl2_window = "^0"
piston2d-graphics = "^0"
piston2d-opengl_graphics = "^0"
rand = "^0.8"
